update comments and orchestration implementation